Code cleanup and improvements.

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -103,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a4687e2b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 3) PREPROCESSING HELPERS\n",
     "\n",
-    "# download stopwords (Finnish) once; fallback to empty set\n",
+    "# download stopwords (Finnish) once\n",
     "nltk.download(\"stopwords\", quiet=True)\n",
     "try:\n",
     "    FINNISH_STOPWORDS = set(stopwords.words(\"finnish\"))\n",
@@ -132,7 +132,7 @@
     "\n",
     "\n",
     "def preprocess_text(text: Any) -> List[str]:\n",
-    "    \"\"\"Lowercase -> strip punctuation (keep ä,ö,å) -> tokenize -> remove stopwords/short tokens.\"\"\"\n",
+    "    \"\"\"Lowercase, strip punctuation (keep ä,ö,å), tokenize, remove stopwords\"\"\"\n",
     "    if not isinstance(text, str):\n",
     "        return []\n",
     "    text = text.lower()\n",
